--- a/config-yml/application.yml
+++ b/config-yml/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: user
+    name: zuul
 server:
-  port: 8081
+  port: 8090
 eureka:
   instance: localhost
   client:
@@ -12,3 +12,21 @@ eureka:
         password: 123456
     service-url:
       defaultZone: http://user:123456@localhost:8080/eureka/
+zuul:
+  host:
+    connect-timeout-millis: 60000
+    socket-timeout-millis: 60000
+  routes:
+    api:
+      path: /api/order/**
+      serviceId: ORDER
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 6000
+ribbon:
+  ConnectionTimeout: 500
+  ReadTimeout: 2000
