--- a/config-yml/application.yml
+++ b/config-yml/application.yml
@@ -18,7 +18,7 @@ zuul:
     socket-timeout-millis: 60000
   routes:
     api:
-      path: /api/order/**
+      path: /apis/order/**
       serviceId: ORDER
 hystrix:
   command:
